--- a/SmartDoorApp/package.json
+++ b/SmartDoorApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@material/dialog": "^13.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~6.6.0",
